--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <footer class="text-center mt-5 mb-3 footer-text">
-    <small>Eric Gutierrez | Lab 3 - ITWS 2110 | Powered by OpenWeatherMap & News API</small>
+    <small>Eric Gutierrez | Lab 3 - ITWS 2110 | Built with OpenWeatherMap & News API</small>
   </footer>
 
   <script src="script.js"></script>
